--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./out/invaders.jar
+          file: ./invaders.jar
           asset_name: invaders.jar
           tag: ${{ github.ref }}
           overwrite: true
