Add description to release notes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,4 @@ jobs:
           asset_name: invaders.jar
           tag: Stable-${{ github.ref }}
           overwrite: true 
-          body: "Automated release. Please edit this description."
+          body: "Up to date release of stable version. Please do not mind the release date. This tag automatically updates files to latest version."
